# autossh

./: .gitignore  README.md  config.example.toml  service.ps1
.pi/extensions/: build.ts
.pi/skills/autossh-ui-preview/: SKILL.md
core/src/: config.rs  ssh.rs  supervisor.rs
core/tests/unit/: config.rs  ssh.rs
crate/core/: Cargo.toml
crate/core/src/: main.rs
crate/core/tests/unit/: logger.rs  supervisor.rs
crate/ui/: Cargo.toml  build.rs
crate/ui/src/: main.rs  supervisor.rs  tray.rs  tunnel_icon.rs
crate/ui/src/app/: dashboard.rs  supervisor.rs
src/: config.rs  lib.rs  logger.rs  main.rs  ssh.rs  supervisor.rs
ui/: Cargo.toml
ui/src/: main.rs  modal.rs
ui/src/app/: centre.rs  mod.rs
