[package]
name = "autossh-ui"
version = "0.1.0"
edition = "2024"
description = "Native GUI for editing autossh-core configuration and watching its runtime log"
license = "MIT"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "autossh-ui"
path = "src/main.rs"

[dependencies]
autossh-core = { path = "../core" }
friday = { path = "../friday" }
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "x11"] }
encoding_rs = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.24.1"
